<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campus Móvil</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="logging_in">Logging in</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="confPasswordHint">Confirm Password</string>
    <string name="registering">Registering</string>
    <string name="register_success">You have successfully registered!</string>
    <string name="login_failure">Wrong Username or Password.</string>
    <string name="register_user_already_exists_failure">The Username already exists.\n\t\tPlease try another one.</string>
    <string name="fill_in_all_fields">Fill in all fields, please.</string>
    <string name="pass_and_confpass_not_equal">Password and Confirm Password\n\t\t\t\tfields are different.</string>
    <string name="email_format_not_valid">Email format is not valid.</string>
    <string name="title_activity_map_handler">MapHandler</string>
    <string name="welcome_msg">Welcome</string>
    <string name="title_activity_interactive_map">Interactive Map</string>
    <string name="internet_connection_required">Internet connection is required.</string>
    <string name="title_activity_information_manager">Information Manager</string>
    <string name="title_activity_search_handler">SearchHandler</string>
    <string name="search_hint">Search</string>
    <string name="search_label">Search</string>
    <string name="search_global_description">Search</string>
    <string name="user_menu">User menu</string>
    <string name="item">Item</string>
    <string name="map">Map</string>
    <string name="places">Places</string>
    <string name="suggestions">Suggestions</string>
    <string name="about_us">About us</string>
    <string name="title_activity_places">Places</string>
    <string name="title_activity_suggestions">Suggestions</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_adapters">Adapters</string>
    <string name="connection_error">Sorry :( . The connection with the server couldn\'t be set.</string>
    <string name="title_activity_map_access">Map Access</string>
    <string name="write_comment">Write your comment here, \nplease.</string>
    <string name="make_your_suggestion">We are very interested in knowing your opinion about this app. \nPlease, leave your comment and let us continue improving your experience.</string>
    <string name="send">Send</string>
    <string name="suggestion_empty">Your suggestion is empty!</string>
    <string name="sending_suggestion">Sending suggestion</string>
    <string name="suggestion_sent">Your suggestion have been sent. Thanks!</string>
    <string name="item_icon">item_icon</string>
    <string name="loading_map_data">Loading map data</string>
    <string name="OK">OK</string>
    <string name="connection_error_title">Connection error</string>
    <string name="for_everyone">Campus Móvil isn\'t just for EAFIT students.\n<b>Campus Móvil is for everyone.</b></string>
    <string name="oops">Oops!</string>
    <string name="suggestion_not_sent">Your suggestion couldn\'t be sent.</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="login_needed">To see the map, you need to log in.</string>
    <string name="login_needed_2">To make a suggestion, you need to log in.</string>
    <string name="log_out">Log out</string>
    <string name="no_results_found">No results found.</string>
    <string name="title_activity_user_markers_manager">Notes in marker:</string>
    <string name="enter_marker_name">Enter title</string>
    <string name="new_user_marker">New marker</string>
    <string name="give_marker_name">Give this marker a title! </string>
    <string name="create">Create</string>
    <string name="creating_your_marker">Creating your marker</string>
    <string name="marker_successfully_created">was successfully created!</string>
    <string name="marker_not_created">Your marker couldn\'t be created.</string>
    <string name="my_markers">My markers</string>
    <string name="retrieving_marker_notes">Retrieving marker notes</string>

</resources>
