<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_guide"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/user_menu"
        android:showAsAction="always" >
        
        <menu>
            <item android:id="@+id/map"
                  android:title="@string/map" />
            <item android:id="@+id/places"
                  android:title="@string/places" />
              <item android:id="@+id/login"
                  android:title="@string/log_in" />
            <item android:id="@+id/suggestions"
                  android:title="@string/suggestions" />
            <item android:id="@+id/aboutUs"
                  android:title="@string/about_us" />
            <item android:id="@+id/logout"
                  android:title="@string/log_out" />
        </menu>
      
    </item>

</menu>
