<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
       android:id="@+id/options_menu_main_search"
       android:actionViewClass="android.widget.SearchView"
       android:icon="@drawable/ic_action_search"
       android:showAsAction="always"
       android:title="@string/search_label" />
    
    <item
        android:id="@+id/action_guide"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/user_menu"
        android:showAsAction="always" >
        
        <menu>
            <item android:id="@+id/places"
                  android:title="@string/places" />
            <item android:id="@+id/login"
                  android:title="@string/log_in" />
            <item android:id="@+id/suggestions"
                  android:title="@string/suggestions" />
            <item android:id="@+id/aboutUs"
                  android:title="@string/about_us" />
        </menu>
      
    </item>

</menu>