<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sicomeafit.campusmovil.Places" >

     <item
        android:id="@+id/action_guide"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/user_menu"
        android:showAsAction="always" >
        
        <menu>
            <item android:id="@+id/map"
                  android:title="@string/map" />
            <item android:id="@+id/suggestions"
                  android:title="@string/suggestions" />
            <item android:id="@+id/aboutUs"
                  android:title="@string/about_us" />
        </menu>
      
    </item>
    
    <item
       android:id="@+id/options_menu_main_search"
       android:actionViewClass="android.widget.SearchView"
       android:icon="@drawable/ic_action_search"
       android:showAsAction="always"
       android:title="@string/search_label" />

</menu>
