<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/confPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/regUsername"
        android:layout_below="@+id/regPassword"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confPasswordHint" />

    <Button
        android:id="@+id/regRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:background="@drawable/button_shape_login"
        android:text="@string/register"
        android:onClick="register" />

    <TextView
        android:id="@+id/regLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="26dp"
        android:text="@string/log_in"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#2179FA"
        android:textSize="17sp"
        android:onClick="returnToLoginView"
        android:clickable="true" />

    <EditText
        android:id="@+id/regUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/regLogin"
        android:ems="10"
        android:hint="@string/usernameHint" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/regUsername"
        android:layout_below="@+id/regUsername"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/regUsername"
        android:layout_below="@+id/regLogin"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />


</RelativeLayout>
