<android.support.v4.widget.DrawerLayout
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 android:id="@+id/drawer_layout"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent" >
	 

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	    
	    
	    <ScrollView
	        android:layout_width="fill_parent"
			android:layout_height="fill_parent" >
	        
			<LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:orientation="vertical"  >
			    
			    <RelativeLayout
			        android:id="@+id/login_view"
			        android:layout_width="match_parent"
			        android:layout_height="464dp" >
				
				    <EditText
				        android:id="@+id/username"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignParentTop="true"
				        android:layout_centerHorizontal="true"
				        android:layout_marginTop="103dp"
				        android:ems="10"
				        android:singleLine="true"
				        android:hint="@string/username"
				        android:inputType="textPersonName" />
			
			    	<Button
				        android:id="@+id/log_in"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_below="@+id/password"
				        android:layout_centerHorizontal="true"
				        android:layout_marginTop="38dp"
				        android:background="@drawable/button_shape_login"
				        android:padding="20dp"
				        android:onClick="logIn"
				        android:text="@string/log_in" />
				
			    	<Button
				        android:id="@+id/register"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_below="@+id/log_in"
				        android:layout_centerHorizontal="true"
				        android:layout_marginTop="20dp"
				        android:background="@drawable/button_shape_register"
				        android:padding="15dp"
				        android:onClick="goToRegisterView"
				        android:text="@string/register" />
			
			    	<EditText
				        android:id="@+id/password"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignLeft="@+id/username"
				        android:layout_below="@+id/username"
				        android:layout_marginTop="39dp"
				        android:ems="10"
				        android:singleLine="true"
				        android:hint="@string/password"
				        android:inputType="textPassword" />
	
			    	<TextView
			    	    android:id="@+id/everyOneLabel"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_below="@+id/register"
			    	    android:gravity="center"
			    	    android:layout_centerHorizontal="true"
			    	    android:text="@string/for_everyone"
			    	    android:textAppearance="?android:attr/textAppearanceSmall" />
			
			    </RelativeLayout>
			    
			    <RelativeLayout 
				    
				    android:id="@+id/register_view"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent" >
				
			    	<EditText
				        android:id="@+id/confPassword"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignLeft="@+id/regUsername"
				        android:layout_below="@+id/regPassword"
				        android:layout_marginTop="28dp"
				        android:ems="10"
				        android:singleLine="true"
				        android:inputType="textPassword"
				        android:hint="@string/confPasswordHint" />
			
			    	<Button
				        android:id="@+id/regRegister"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_below="@+id/confPassword"
				        android:layout_centerHorizontal="true"
				        android:layout_marginTop="30dp"
				        android:padding="20dp"
				        android:background="@drawable/button_shape_login"
				        android:text="@string/register"
				        android:onClick="register" />
			
			    	<TextView
				        android:id="@+id/regLogin"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignParentLeft="true"
				        android:layout_alignParentTop="true"
				        android:layout_marginLeft="17dp"
				        android:layout_marginTop="26dp"
				        android:text="@string/log_in"
				        android:textAppearance="?android:attr/textAppearanceSmall"
				        android:textColor="#2179FA"
				        android:textSize="17sp"
				        android:singleLine="true"
				        android:onClick="returnToLoginView"
				        android:clickable="true" />
			
			    	<EditText
				        android:id="@+id/regUsername"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_below="@+id/email"
				        android:layout_marginTop="24dp"
				        android:layout_toRightOf="@+id/regLogin"
				        android:ems="10"
				        android:singleLine="true"
				        android:hint="@string/usernameHint" />
			
			    	<EditText
				        android:id="@+id/regPassword"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignLeft="@+id/regUsername"
				        android:layout_below="@+id/regUsername"
				        android:layout_marginTop="17dp"
				        android:ems="10"
				        android:singleLine="true"
				        android:hint="@string/passwordHint"
				        android:inputType="textPassword" />
			
			    	<EditText
				        android:id="@+id/email"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignLeft="@+id/regUsername"
				        android:layout_below="@+id/regLogin"
				        android:layout_marginTop="52dp"
				        android:ems="10"
				        android:singleLine="true"
				        android:hint="@string/emailHint"
				        android:inputType="textEmailAddress" />
				
					</RelativeLayout>
					
			</LinearLayout>
			
		</ScrollView>
		
		
    </RelativeLayout>
		    

	<!-- Navigation Drawer -->
	 
	<ListView
		 android:id="@+id/drawer"
		 android:layout_width="240dp"
		 android:layout_height="match_parent"
		 android:layout_gravity="left"
		 android:background="#EEE" />
	 
	
</android.support.v4.widget.DrawerLayout>
			
	

