<android.support.v4.widget.DrawerLayout
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 android:id="@+id/drawer_layout"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent" >
	 
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	    
	    
	    <ScrollView
	        android:layout_width="fill_parent"
			android:layout_height="match_parent" >
			
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:orientation="vertical"  >
	
				<TextView
				    android:id="@+id/weAreInterested"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="26dp"
				    android:layout_marginLeft="10dp"
				    android:layout_marginRight="10dp"
				    android:text="@string/make_your_suggestion"
				    android:textAppearance="?android:attr/textAppearanceMedium" />
			
				<EditText
				    android:id="@+id/suggestion"
				    android:layout_width="250dp"
				    android:layout_height="200dp"
				    android:layout_marginBottom="27dp"
				    android:layout_marginTop="27dp"
				    android:layout_gravity="center"
				    android:ems="10"
				    android:gravity="left|top"
				    android:hint="@string/write_comment"
				    android:inputType="textMultiLine|textCapSentences" />
			
				<Button
				    android:id="@+id/send_comment"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginBottom="19dp"
				    android:layout_gravity="center"
				    android:background="@drawable/button_shape_send"
				    android:onClick="makeSuggestion"
				    android:padding="20dp"
				    android:text="@string/send" />
				
	  		</LinearLayout>
	  	
	  	</ScrollView>
	  	
    
	</RelativeLayout>
	
	
	<!-- Navigation Drawer -->
		 
	<ListView
		 android:id="@+id/drawer"
		 android:layout_width="240dp"
		 android:layout_height="match_parent"
		 android:layout_gravity="left"
		 android:background="#EEE" />
	 
	
</android.support.v4.widget.DrawerLayout>
